implementado novo copia e cola do pix

--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -301,7 +301,7 @@
     <script>
         function showPaymentOptions() {
             var modal = document.getElementById("paymentModal");
-            window.currentPixLink = '19885326948'; // Usar CPF para Pix
+            window.currentPixLink = '00020126330014BR.GOV.BCB.PIX0111109853269485204000053039865802BR5919Fulano de Tal6008Sao Paulo62070503***63045A09'; // Usar o código PIX completo
             modal.style.display = "block";
         }
 
