--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -301,7 +301,7 @@
     <script>
         function showPaymentOptions() {
             var modal = document.getElementById("paymentModal");
-            window.currentPixLink = '00020126330014BR.GOV.BCB.PIX0111109853269485204000053039865802BR5919Fulano de Tal6008Sao Paulo62070503***63045A09'; // Usar o código PIX completo
+            window.currentPixLink = '00020126330014BR.GOV.BCB.PIX0111109853269485204000053039865802BR5925Filipe Querino dos Santos6009SAO PAULO62140510Y6cu90lb2g630496C1'; // Código PIX completo
             modal.style.display = "block";
         }
 
