--- a/src/app/confirm.html
+++ b/src/app/confirm.html
@@ -25,6 +25,7 @@
             </button>
         </form>
     </div>
+    <div id="toast" class="toast">Confirmação enviada com sucesso!</div>
     <script src="../scripts/confirm.js"></script>
 </body>
 </html>
