ajustado rota de pastas

--- a/src/app/confirm.html
+++ b/src/app/confirm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmação de Presença</title>
-    <link rel="stylesheet" href="../app/styles/confirm.css">
+    <link rel="stylesheet" href="../styles/confirm.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
@@ -26,6 +26,6 @@
         </form>
     </div>
     <div id="toast" class="toast">Confirmação enviada com sucesso!</div>
-    <script src="../app/scripts/confirm.js"></script>
+    <script src="../scripts/confirm.js"></script>
 </body>
 </html>
