--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,6 +7,7 @@
     <title>Casamento de Nathielly e Filipe</title>
     <!-- Link para o Font Awesome (versão hospedada) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <style>
         @keyframes bounce {
             0%,
