--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,6 +8,11 @@
     <!-- Link para o Font Awesome (versão hospedada) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="../assets/favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="apple-touch-icon" href="../assets/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="../assets/android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="../assets/android-chrome-512x512.png">
     <style>
         @keyframes bounce {
             0%,
