--- a/src/app/home.html
+++ b/src/app/home.html
@@ -146,7 +146,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Escolha uma opção de presente</h2>
-            <a href="https://www.magazineluiza.com.br" target="_blank" class="modal-button">Magalu</a>
+            <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="modal-button">Magalu</a>
             <a href="giftgallery.html" target="_blank" class="modal-button">PIX</a>
         </div>
     </div>
