--- a/src/app/home.html
+++ b/src/app/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Casamento</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="../styles/home.css"> <!-- Link para o CSS separado -->
+    <link rel="stylesheet" href="../styles/home.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <i class="fas fa-check"></i>
             <span>Confirmação</span>
         </a>
-        <a href="https://abrir.link/zjsDp" target="_blank" class="button">
+        <a href="#" class="button" id="locationButton">
             <i class="fas fa-map-marker-alt"></i>
             <span>Localização</span>
         </a>
@@ -34,7 +34,7 @@
         </a>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal para a Lista de Presentes -->
     <div id="giftListModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -44,7 +44,17 @@
         </div>
     </div>
 
-    <script src="../scripts/home.js"></script> <!-- Link para o JavaScript separado -->
+    <!-- Modal para Localização -->
+    <div id="locationModal" class="modal">
+        <div class="modal-content">
+            <span class="close-location">&times;</span>
+            <h2>Escolha uma opção de localização</h2>
+            <a href="https://abrir.link/zjsDp" target="_blank" class="modal-button">Localização no Mapa</a>
+            <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">Ver Local em 3D</a>
+        </div>
+    </div>
+
+    <script src="../scripts/home.js"></script>
 </body>
 
 </html>
