--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('./assets/fundo.jpg');
+    background-image: url('../assets/fundo.jpg'); /* Restaurando o fundo */
     background-size: cover;
     background-position: center;
     font-family: Arial, sans-serif;
