--- a/src/app/home.html
+++ b/src/app/home.html
@@ -10,29 +10,27 @@
 </head>
 
 <body>
-    <div class="countdown-container">
-        <h2>Contagem Regressiva para o Grande Dia</h2>
-        <div id="countdown"></div>
+<div class="countdown-container">
+    <h2>Contagem Regressiva para o Grande Dia</h2>
+    <div id="countdown">
+        <div class="countdown-item">
+            <div id="days">0</div>
+            <span>Dias</span>
+        </div>
+        <div class="countdown-item">
+            <div id="hours">0</div>
+            <span>Horas</span>
+        </div>
+        <div class="countdown-item">
+            <div id="minutes">0</div>
+            <span>Minutos</span>
+        </div>
+        <div class="countdown-item">
+            <div id="seconds">0</div>
+            <span>Segundos</span>
+        </div>
     </div>
-
-    <div class="buttons-container">
-        <a href="confirm.html" target="_blank" class="button">
-            <i class="fas fa-check"></i>
-            <span>Confirmação</span>
-        </a>
-        <a href="#" class="button" id="locationButton">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Localização</span>
-        </a>
-        <a href="#" class="button" id="giftListButton">
-            <i class="fas fa-gift"></i>
-            <span>Lista de Presentes</span>
-        </a>
-        <a href="dress-code.html" target="_blank" class="button">
-            <i class="fas fa-tshirt"></i>
-            <span>Dress Code</span>
-        </a>
-    </div>
+</div>
 
 <!-- Modal para a Lista de Presentes -->
 <div id="giftListModal" class="modal">
