--- a/src/app/home.html
+++ b/src/app/home.html
@@ -10,47 +10,66 @@
 </head>
 
 <body>
-<div class="countdown-container">
-    <h2>Contagem Regressiva para o Grande Dia</h2>
-    <div id="countdown">
-        <div class="countdown-item">
-            <div id="days">0</div>
-            <span>Dias</span>
-        </div>
-        <div class="countdown-item">
-            <div id="hours">0</div>
-            <span>Horas</span>
-        </div>
-        <div class="countdown-item">
-            <div id="minutes">0</div>
-            <span>Minutos</span>
-        </div>
-        <div class="countdown-item">
-            <div id="seconds">0</div>
-            <span>Segundos</span>
+    <div class="countdown-container">
+        <h2>Contagem Regressiva para o Grande Dia</h2>
+        <div id="countdown">
+            <div class="countdown-item">
+                <div id="days">0</div>
+                <span>Dias</span>
+            </div>
+            <div class="countdown-item">
+                <div id="hours">0</div>
+                <span>Horas</span>
+            </div>
+            <div class="countdown-item">
+                <div id="minutes">0</div>
+                <span>Minutos</span>
+            </div>
+            <div class="countdown-item">
+                <div id="seconds">0</div>
+                <span>Segundos</span>
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal para a Lista de Presentes -->
-<div id="giftListModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Escolha uma opção de presente</h2>
-        <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="modal-button">Magalu</a>
-        <a href="giftgallery.html" target="_blank" class="modal-button">PIX</a>
+    <div class="buttons-container">
+        <a href="confirm.html" target="_blank" class="button">
+            <i class="fas fa-check"></i>
+            <span>Confirmação</span>
+        </a>
+        <a href="#" class="button" id="locationButton">
+            <i class="fas fa-map-marker-alt"></i>
+            <span>Localização</span>
+        </a>
+        <a href="#" class="button" id="giftListButton">
+            <i class="fas fa-gift"></i>
+            <span>Lista de Presentes</span>
+        </a>
+        <a href="dress-code.html" target="_blank" class="button">
+            <i class="fas fa-tshirt"></i>
+            <span>Dress Code</span>
+        </a>
     </div>
-</div>
 
-<!-- Modal para Localização -->
-<div id="locationModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span> <!-- Atualizado para ser igual ao modal de presentes -->
-        <h2>Escolha uma opção de localização</h2>
-        <a href="https://abrir.link/zjsDp" target="_blank" class="modal-button">Localização no Mapa</a>
-        <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">Ver Local em 3D</a>
+    <!-- Modal para a Lista de Presentes -->
+    <div id="giftListModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Escolha uma opção de presente</h2>
+            <a href="https://www.finalfeliz.de/filipe-querino-nathielly-jorge" target="_blank" class="modal-button">Magalu</a>
+            <a href="giftgallery.html" target="_blank" class="modal-button">PIX</a>
+        </div>
     </div>
-</div>
+
+    <!-- Modal para Localização -->
+    <div id="locationModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Escolha uma opção de localização</h2>
+            <a href="https://abrir.link/zjsDp" target="_blank" class="modal-button">Localização no Mapa</a>
+            <a href="https://santacatarina360.github.io/KiosqueDigoeMoni/" target="_blank" class="modal-button">Ver Local em 3D</a>
+        </div>
+    </div>
 
     <script src="../scripts/home.js"></script>
 </body>
