--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casamento de Nathielly e Filipe</title>
-    <!-- Link para o Font Awesome (versão hospedada) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="../assets/favicon-32x32.png" type="image/png" sizes="32x32">
@@ -13,149 +12,7 @@
     <link rel="apple-touch-icon" href="../assets/apple-touch-icon.png">
     <link rel="icon" sizes="192x192" href="../assets/android-chrome-192x192.png">
     <link rel="icon" sizes="512x512" href="../assets/android-chrome-512x512.png">
-    <style>
-        @keyframes bounce {
-            0%,
-            20%,
-            50%,
-            80%,
-            100% {
-                transform: translateY(0);
-            }
-
-            40% {
-                transform: translateY(-20px);
-            }
-
-            60% {
-                transform: translateY(-10px);
-            }
-        }
-
-        body {
-            background-image: url('./assets/fundo.jpg');
-            background-size: cover;
-            background-position: center;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            position: relative;
-        }
-
-        .content {
-            background-color: white;
-            padding: 20px;
-            border-top-left-radius: 50% 20%;
-            border-top-right-radius: 50% 20%;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 6px rgba(0, 0, 0, 0.23);
-            width: 80%;
-            max-width: 600px;
-            min-height: 80vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin: auto;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .title {
-            font-family: "Great Vibes", cursive;
-            font-size: 5rem;
-            color: darkolivegreen;
-            margin-bottom: 20px;
-        }
-
-        .subtitle {
-            font-size: 1.4rem;
-            color: darkolivegreen;
-            margin-bottom: 20px;
-        }
-
-        .date {
-            font-family: "Cormorant SC", serif;
-            font-size: 4rem;
-            color: darkolivegreen;
-            margin-bottom: 20px;
-        }
-
-        .button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: transparent;
-            border: none;
-            margin-top: 20px;
-            font-size: 5rem;
-            color: darkolivegreen;
-            transition: color 0.3s ease;
-            text-decoration: none;
-            max-width: 300px;
-            padding: 15px 30px;
-        }
-
-        .button i {
-            font-size: 7rem;
-            margin-right: 10px;
-            animation: bounce 2s infinite;
-        }
-
-        .button:hover {
-            color: forestgreen;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        .footer-img {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 100px;
-            background: url('./assets/mato.png') repeat-x;
-            background-size: contain;
-        }
-
-        /* Media query para telas menores, como celulares */
-        @media only screen and (max-width: 500px) {
-            .content {
-                width: 80%;
-                margin-bottom: 0px;
-                max-height: 50vh;
-            }
-
-            .title {
-                font-size: 2rem;
-            }
-
-            .subtitle {
-                font-size: 0.6rem;
-            }
-
-            .date {
-                font-size: 2rem;
-            }
-
-            .button i {
-                font-size: 5rem;
-            }
-
-            .button {
-                font-size: 3rem;
-                padding: 10px 20px;
-            }
-
-            .footer-img {
-                height: 50px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="../styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Great+Vibes&family=Parisienne&family=Sacramento&family=Cormorant+SC&display=swap" rel="stylesheet">
 </head>
 
@@ -163,7 +20,7 @@
     <div class="content">
         <div class="title">Nathielly e Filipe</div>
         <div class="subtitle">CONVIDAM PARA A CELEBRAÇÃO DE SEU CASAMENTO</div>
-        <div class="date">08 • 03 • 25</div>
+        <div class="date">08 • 03 • 25 às 15:00</div> <!-- Horário do evento adicionado -->
         <a href="home.html" class="button">
             <i class="far fa-envelope"></i>
         </a>
