--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -89,7 +89,7 @@ body {
 }
 
 .button:hover {
-    color: #2e8b57; /* Verde mais escuro para o hover */
+    color: #006400; /* Verde bem escuro para o hover */
 }
 
 a {
