--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -101,9 +101,10 @@ a {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 150px; /* Aumentado para destacar mais a imagem */
+    height: 180px; /* Tamanho da imagem */
     background: url('../assets/mato.png') repeat-x;
     background-size: contain;
+    opacity: 0.8; /* Opacidade */
 }
 
 /* Media query para telas menores, como celulares */
@@ -135,7 +136,8 @@ a {
         padding: 10px 20px;
     }
 
-    .footer-img {
-        height: 70px; /* Ajustado para telas menores */
+   .footer-img {
+        height: 90px;
+        opacity: 0.8;
     }
 }
