--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -14,7 +14,7 @@
         <h1>Galeria de Presentes</h1>
         <p>Escolha um presente para nosso casamento</p>
     </header>
-    <div class="gallery" id="gallery"></div>
+    <div class="gallery" id="gallery"></div> <!-- A galeria será gerada dinamicamente via JavaScript -->
     <footer>
         <p>Obrigado por fazer parte do nosso grande dia!</p>
     </footer>
