--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -26,7 +26,7 @@
             <h2>Formas de Pagamento</h2>
             <div class="button-container">
                 <button class="icon-button" onclick="copyPix()">
-                    <i class="fas fa-money-bill-wave"></i>
+                    <i class="fas fa-paste"></i> <!-- Ícone de 'copia e cola' ou substitua por algo relacionado ao Pix -->
                 </button>
                 <button class="icon-button" onclick="showQRCode()">
                     <i class="fas fa-qrcode"></i>
