--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -41,6 +41,16 @@
         </div>
     </div>
 
+    <!-- Modal do QR Code -->
+    <div id="qrCodeModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="qrCodeContainer">
+                <img src="../assets/qrcode-ai.png" alt="QR Code" style="max-width: 100%; height: auto; margin-top: 20px;">
+            </div>
+        </div>
+    </div>
+
     <!-- Toast Notification -->
     <div id="toast" class="toast">Presente escolhido, agora é só fazer o Pix!</div>
 
