--- a/src/app/giftgallery.html
+++ b/src/app/giftgallery.html
@@ -28,7 +28,7 @@
                 <button class="icon-button" onclick="copyPix()">
                     <i class="fas fa-paste"></i> <!-- Ícone de 'copia e cola' ou substitua por algo relacionado ao Pix -->
                 </button>
-                <button class="icon-button" onclick="showQRCode()">
+                <button class="icon-button" onclick="showQRCodeModal()">
                     <i class="fas fa-qrcode"></i>
                 </button>
                 <button class="icon-button" onclick="cardPaymentOption()">
